users page updated